--- a/templates/training.html
+++ b/templates/training.html
@@ -5,8 +5,11 @@
     <title>[%= title %]</title>
     <link rel="stylesheet/less" type="text/css" href="/static/style.less" media="screen" />
     <script type="text/javascript" src="/static/less.js"></script>
+    <script type="text/javascript" src="/static/jquery.js"></script>
+    <script type="text/javascript" src="/static/underscore.js"></script>
+    <script type="text/javascript" src="/static/index.js"></script>
 </head>
 <body>
-[%= title %]
+
 </body>
 </html>
