--- a/templates/training.html
+++ b/templates/training.html
@@ -10,6 +10,12 @@
     <script type="text/javascript" src="/static/index.js"></script>
 </head>
 <body>
-
+	<div id="scene">
+		<div id="question"></div>
+		<input id="input" type="text" /><br />
+		<div id="letters"></div>
+		<input type="button" value="Next" id="next" />
+		<input type="button" value="Skip" id="skip" />
+	</div>
 </body>
 </html>
