--- a/public/style.less
+++ b/public/style.less
@@ -3,3 +3,11 @@ body {
     margin: 0;
     padding: 0;
 }
+
+input.invalid {
+	border: 10px solid red;
+}
+
+input.valid {
+	border: 10px solid green;
+}
