added some CSS styles

--- a/templates/training.html
+++ b/templates/training.html
@@ -10,12 +10,16 @@
     <script type="text/javascript" src="/static/index.js"></script>
 </head>
 <body>
-	<div id="scene">
-		<div id="question"></div>
-		<input id="input" type="text" /><br />
-		<div id="letters"></div>
-		<input type="button" value="Next" id="next" />
-		<input type="button" value="Skip" id="skip" />
-	</div>
+    <div id="scene">
+        <div id="scene-screen">
+            <div id="question"></div>
+            <input id="input" type="text" /><br />
+            <div id="letters"></div>
+        </div>
+        <div id="scene-buttons">
+            <button id="next">Next</button>
+            <button id="skip">Skip</button>
+        </div>
+    </div>
 </body>
 </html>
