--- a/public/style.less
+++ b/public/style.less
@@ -3,11 +3,65 @@ body {
     margin: 0;
     padding: 0;
 }
-
-input.invalid {
-	border: 10px solid red;
+body {
+    background: #e7f0f3;
 }
 
-input.valid {
-	border: 10px solid green;
+
+#scene {
+    width: 670px;
+    margin: 100px auto 0 auto;
+    padding: 6px;
+    background: #e7f0f3;
+    box-shadow: 0 0 5px #2C5B68;
+    border-radius: 4px;
+
+    #scene-screen {
+        padding: 25px 30px 20px;
+        background: white;
+        border-style: solid;
+        border-width: 1px;
+        border-color: #B8C9CD #E6ECED #E1E8E9;
+        box-shadow: 1px 1px 0 white;
+        border-radius: 4px;
+        margin-bottom: 20px;
+        text-align: center;
+
+        #question {
+            font-size: 25px;
+            text-align: center;
+            margin: 9px 0 35px;
+        }
+
+        input {
+            &.invalid {
+                background: #ff8d7d;
+            }
+            &.valid {
+                background: #b8f7a1;
+            }
+        }
+
+        #letters {
+            padding-top: 20px;
+        }
+    }
+
+    #scene-buttons {
+        text-align: right;
+        height: 135px;
+
+        button {
+            color: white;
+            text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+            font: normal 12px Arial, Helvetica;
+            padding: 8px 21px;
+            background: #F3F3F3;
+            background: -webkit-linear-gradient(top,#5C84C2,#406AAA);
+            border-radius: 2px;
+            border: 1px solid;
+            border-color: #3F69A9 #3F69A9 #325386 !important;
+            box-shadow: 0px 1px 0 rgba(34, 57, 91, 0.3), 0 2px 1px -2px rgba(255, 255, 255, 0.5);
+        }
+    }
 }
