embellish letters block

--- a/public/style.less
+++ b/public/style.less
@@ -44,6 +44,27 @@ body {
 
         #letters {
             padding-top: 20px;
+
+            > span {
+                display: inline-block;
+                width: 35px;
+                height: 35px;
+                background-color: #DDD;
+                border: solid 1px;
+                margin: 4px 2px;
+                font-size: 25px;
+                font-weight: bold;
+                color: white;
+                line-height: 31px;
+                text-shadow: none;
+                border-color: #7DC8F6 #368ABA #1D77AA #71C3F4;
+                background: -webkit-gradient(linear,0 0,0 100%,from(#9BDAFF),to(#59BAF1));
+                background: -moz-linear-gradient(top,#9BDAFF,#59BAF1);
+                background: -o-linear-gradient(top,#9BDAFF,#59BAF1);
+                cursor: pointer;
+                border-radius: 3px;
+                font-family: Arial, sans-serif;
+            }
         }
     }
 
